# split_bill

./: .coverage  README.MD  main.py  pyproject.toml
split_bill/: optimize.py
test/: test_optimize.py
